--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -51,3 +51,24 @@
   right: 0;
   background-size: contain;
 }
+
+@media only screen and (max-width: 1060px) {
+  .button__bg {
+    background-image: url('/assets/buttonbgmobile.png');
+    right: 0;
+    width: 100%;
+    max-width: 650px;
+    height: 100%;
+    background-size: contain;
+  }
+}
+
+@media only screen and (max-height: 720px) {
+  .idea__header {
+    padding-top: unset !important;
+  }
+
+  .navbar__arrow {
+    padding-top: 21px !important;
+  }
+}
